# Token-Tracker

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PUBLISH.md  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: npm-publish.yml  publish.yml
backend/: Cargo.toml
backend/src/: main.rs  notifications.rs
backend/src/browser/: cookies.rs  detection.rs
backend/src/cli/: mod.rs
backend/src/core/: credentials.rs  provider.rs  provider_factory.rs  rate_window.rs  token_accounts.rs  usage_snapshot.rs
backend/src/providers/: mod.rs  provider_factory.rs
backend/src/providers/antigravity/: mod.rs
backend/src/providers/claude/: oauth.rs
backend/src/providers/codex/: api.rs
backend/src/providers/freemodel/: mod.rs
backend/src/providers/gemini/: api.rs
backend/src/providers/grok/: mod.rs
backend/src/providers/minimax/: minimax.md  mod.rs
backend/src/providers/ollama/: ollama.md
backend/src/providers/opencode/: mod.rs
backend/src/server/: handlers.rs  mod.rs
backend/src/settings/: api_keys.rs
docs/: SOURCE_PRIORITY.md
docs/apis-docs/: antigravity-api.md  claude-api.md  codex-api.md  cursor-api.md  grok-api.md  opencode-api.md
scripts/: postinstall.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AboutModal.tsx  ActionMenu.tsx  AddAccountModal.tsx  CLITerminal.tsx  CostCard.tsx  CreditsCost.tsx  (+22 more)
(+17 files in other folders)
