[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Encryption for cookie decryption
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"


# Secure credential storage
keyring = "3"

# Native PTY support for interactive command execution (e.g. CLI logins)
portable-pty = "0.9"

# URL and UUID handling
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex-lite = "0.1"

# Iterator utilities
itertools = "0.14"

# Finding executables
which = "7"

# Standard paths
dirs = "6"

# Linux notifications
notify-rust = "4"

# Cryptography for Linux cookie decryption
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"

[dev-dependencies]
tempfile = "3"

